src/objects/Linked_Fee__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Linked Fee</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Fee</description>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Linked Fees</relationshipLabel>
        <relationshipName>Linked_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>Related To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deal</fullName>
                </value>
                <value>
                    <fullName>Service Job</fullName>
                </value>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Linked_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Linked Fee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LF-{00000000}</displayFormat>
        <label>Linked Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>